--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -50,20 +50,20 @@ $^2$\emph{\small Filmuniversität Babelsberg KONRAD WOLF}}
 
 Before introducing the open science approach in detail its worthwhile to review the
 foundations of the scientific method. It may be referred to  as 
-\emph{`A method of procedure that has characterized natural science since the 17th 
+\emph{'A method of procedure that has characterized natural science since the 17th 
 century, consisting in systematic observation, measurement, and experiment, and the 
 formulation, testing, and modification of hypotheses.'}~\cite{scientific_method:OXD}. 
 Science builds upon a set of well accepted methods which are commonly believed to
 ensure above formulated principles. Besides these, the reproducibility of results is 
 one of the cornerstones of the scientific method. 
-It may be defined as \emph{`Reproducibility is the ability of an entire analysis of 
+It may be defined as \emph{'Reproducibility is the ability of an entire analysis of 
 an experiment or study to be duplicated, either by the same researcher or by someone 
 else working independently, whereas reproducing an experiment is called replicating 
 it.'}~\cite{Leek15:PNAS}. 
 The irreproducibility of a wide range of scientific results has drawn significant 
 attention in the last decade~\cite{Borgwardt:Book,retraction:WWW,ioannidis05:PLOS, open15:AAAS, chalmers09:OG, freedman15:PLOS, howells14:Nature}. 
 In order to track down the problem of irreproducibility the application areas of 
-the scientific method have been classified into three branches~\cite{Donoho:CSE,Stodden2014:talk}:
+the scientific method have been classified into three branches by~\cite{Donoho:CSE,Stodden2014:talk}:
 \begin{enumerate}
 \item deductive
 \item empirical
@@ -73,7 +73,7 @@ The deductive branch covers results derived e.g. by formal logic and mathematics
 branch e.g. statistical analysis of controlled experiments. The first two are traditional branches, 
 while the last one is considered as a potentially novel branch. It covers results derived by large-scale simulations
 and data-driven computational science. The measures that have to be taken to ensure reproducibilitly
-in the traditional branches are quite well known. This does not hold for the third, computational, branch.
+in the traditional are quite well known. This does not hold for the third, computational, branch.
 
 Besides problems in the research methods themselves, results are often not reproducible since 
 necessary supplementary material as protocols, data and implementations are not available. In 
@@ -93,7 +93,7 @@ the degree of transparency are:
 \end{itemize}
 While research conducted for myself does not require any transparency in terms
 of underlying data, research performed for the sake of science itself should be
-as open as possible to encourage scientific advancement.
+as open as possible to support scientific advancement.
 
 
 % ================================================================================
@@ -119,7 +119,7 @@ Availability of source code of the implementations used in the research process,
 for numerical simulations, statistical analyses and graphical user interfaces.
 %
 \item \textbf{Open (Science) Data}\\
-Availability of the data underlying the research, whereas data does not only refer 
+Availability of the raw/processed data underlying the research, whereas data does not only refer 
 to electronic resources but also to protocols, material samples, etc. For instance
 impulse responses, anechoic stimuli and anthropomorphic data.
 %
@@ -127,7 +127,7 @@ impulse responses, anechoic stimuli and anthropomorphic data.
 Free access to published research output, e.g. articles.
 %
 \item \textbf{Open Methodology}\\
-Detailed documentation of the methodology underlying the research. For instant hypothesis 
+Detailed documentation of the methodology underlying the research. For instance hypothesis 
 and experimental procedure.
 %
 \item \textbf{Open Notebook Science}\\
@@ -155,7 +155,7 @@ following stages:
 \item \textbf{Idea}\\
 The results of a preceding experiment or a discussion among colleagues is often the advent 
 for new research projects. These ideas reveal for instance the motivation behind the research. 
-Publishing the ideas in the sake of \underline{Open Notebook Science} makes them accessible 
+Publishing the ideas in the spirit of \underline{Open Notebook Science} makes them accessible 
 to the public.
 %
 \item \textbf{Design of Experiment}\\
@@ -165,39 +165,40 @@ makes the design available.
 %
 \item\textbf{Computation}\\
 The generation of stimuli may involve mathematical deviations for numerical simulations, the 
-implementation of signal processing, control logic and graphical user interface, as well as data like impulse responses and anechoic recordings. These
-can be made available following \underline{Open Notebook Science}, \underline{Open Data} and \underline{Open Source}.
+implementation of signal processing, as well as data like impulse responses and anechoic recordings. For the
+experiment itself often a control logic and graphical user interface is implemented. These can be made available 
+following \underline{Open Notebook Science}, \underline{Open Data} and \underline{Open Source}.
 %
 \item \textbf{Experiment}\\
-In the next step the experiment is conducted. Here the responses are collected from the test subjects potentially 
+The experiment is conducted in the next step. Here the responses are collected from the test subject potentially 
 together with other data like head orientation. This constitutes raw data which is processed later in the analysis stage. 
 The data can be published as \underline{Open Data} as long as no privacy issues are raised.
 %
 \item \textbf{Analysis}\\
 The statistical analysis of the raw data is the basis of the generalization of the individual results. This may
-involve the anonymization and outlier removal as first steps. The analysis can be made transparent using the elements
-\underline{Open Methodology}, \underline{Open Source} and \underline{Open Data}.
+involve the anonymization and outlier removal as first steps. The analysis and the processed data can be made 
+transparent using the elements \underline{Open Methodology}, \underline{Open Source} and \underline{Open Data}.
 %
 \item \textbf{Manuscript}\\
 The design and the results of the perceptual study are compiled into a manuscript. It is composed
 from text, references and visualizations of the analyzed results. The manuscript may be published 
-as \underline{Open Access}.
+as \underline{Open Access} publication.
 %
 \item \textbf{Pre-Publication Peer Review}\\
 The publication process typically involves some kind of quality assessment. The manuscript is evaluated by
 independent reviewers who provide ratings and suggestions for improvement. If accepted the manuscript is
-the revised on this basis. The peer review process can be made transparent using \underline{Open Peer Review}.
+then revised. The peer review process can be made transparent using \underline{Open Peer Review}.
 %
 \item \textbf{Publication}\\
-After successful incorporation of comments from the pre-publication peer review the manuscript is ready for
+After successful incorporation of comments from the pre-publication peer review, the manuscript is ready for
 publication. It may be accompanied by supplementary material in order to improve the ease of reproducibility. In the
 case of conference papers a presentation may be given which contains other or additional material. The elements involved
 for publication are \underline{Open Access}, \underline{Open Source} and \underline{Open Data}.
 %
 \item \textbf{Aftermath}\\
 After publication, the presented research may be replicated by others. Post-publication
-review will consider the correctness and relevance of the research. Feedback from this
-may require to publish errata or revise the underlying data and code. Finally open 
+review will consider the correctness and relevance of the research. The feedback may 
+require to publish an errata or revise the underlying data and code. Finally open 
 questions may bring up ideas for the next research project.
 \end{enumerate}
 
@@ -205,27 +206,19 @@ questions may bring up ideas for the next research project.
 % ================================================================================
 \section*{Copyright and Licenses} \label{sec:copyright}
 
-Licenses are an important aspect of open science. Scientific code and data that is made 
-available to the public should be accompanied by a clear license statement. Otherwise,
-due to copyright laws, re-distribution and re-use is most likely forbidden.
-The exact legal implications are
-rather complex, hard to oversee and depend on the country whose copyright laws apply.
+Licenses are an important aspect of open science. Scientific data that is made 
+available to the public has to be accompanied by a clear license statement. Otherwise
+the situation concerning copyright and reuse is unclear. The legal implications are
+rather complex, hard to oversee and country dependent in this case. The community offers
+a wide variety of licensing frameworks which are of use for open science. In general different 
+licenses are used for data, text, images, artwork and code. For the former the family of 
+creative commons (CC) licenses\footnote{\url{https://creativecommons.org}} is a good 
+choice~\cite{Kreuzer14:Book}. For the latter various license models are used, for instance 
+the GNU General Public License (GPL), BSD or MIT License, to name a few.
 
-In order to explicitly allow re-distribution and re-use -- under well-defined conditions -- there are
-a variety of licensing frameworks which can be used for open science.
-For text, images, artwork and similar works, the family of 
-creative commons (CC) licenses~\cite{CC} is a good choice~\cite{Kreuzer14:Book},
-especially the rather permissive variant CC\,BY and the more restrictive variant CC\,BY\,SA.
-When publishing source code, one of the many available open source licenses should be used.
-Examples are the permissive BSD or MIT licenses and the more restrictive
-GNU General Public License (GPL), just to name a few.
-
-To promote wide-spread legal re-use of research results, a permissive license should be preferred.
-There are even tools which allow authors to waive all their rights,
-as far as legally possible, most notably CC0.
-In order to aid in the selection of an appropriate licensing strategy, recommendations
-for open science have been given~\cite{Stodden09:CSE,}.
-
+The chosen license model should be as less restrictive as possible in order to promote the
+re-use. In order to aid in the selection of an appropriate licensing strategy, recommendations
+for open science have been given~\cite{Stodden09:CSE}.
 
 
 % ================================================================================
@@ -244,7 +237,7 @@ in~\cite{DFG_GWP:Book,HRK_FDM:WWW,Stodden2014:JORS,H2020_FAIR:ERC}:
 \item offer training and qualification
 \end{itemize}
 The data management plan should document the data raised and processed, its handling and
-archival. The use of workflow tracking (e.g. SVN, Git) makes the research process transparent 
+archival. The use of workflow tracking (e.g. SVN, git) makes the research process transparent 
 and allows to discover for instance the source of problems. The FAIR policy in conjunction with
 open licensing models promotes the re-use of published data. Training and qualification is an
 essential cornerstone of a decent data management strategy. It should highlight the importance
@@ -256,7 +249,10 @@ of funding schemes.
 
 
 % ================================================================================
-\section*{Empirical Analysis of Open Science} \label{sec:empirical_analysis}
+\section*{Conclusions} \label{sec:conclusions} 
+
+% ................................................................................
+\paragraph*{Empirical Analysis of Open Science}
 
 Open science has been evaluated in a number of empirical studies. This covers the
 actual state with respect to data publications up to the impact of open access 
@@ -274,30 +270,31 @@ open access publications, e.g.~\cite{Swan10:study,McCabe14:EI}. An clear advanta
 could be shown in most cases and less to no advantage in rare cases.
 
 
-% ================================================================================
-\section*{Personal Experience} \label{sec:personal_experience}
+% ................................................................................
+\paragraph*{Personal Experience}
 
-Besides using open toolboxes and datasets, our own expertise with open science began 
+Besides using open toolboxes and datasets, our own experience with open science began 
 with the open source release of the SoundScape Renderer (SSR)~\cite{Geier07:DEGA} in 
 2010\footnote{\url{https://github.com/SoundScapeRenderer}}. Since then various software toolboxes, 
 datasets, open access papers and open educational resources have been 
 published\footnote{\url{https://github.com/spatialaudio}}\footnote{\url{https://github.com/sfstoolbox}}. 
 We use Redmine~\footnote{\url{http://www.redmine.org/}}, SVN and Git for internal data management. Public releases are mainly
-available on GitHub and referenced by zenodo\footnote{\url{https://zenodo.org/}} if required. Challenges were the initial effort to get familiar with the workflow and license models. We furthermore did not find
-a convenient solution for version tracking of large databases, for instance room 
+available on github and referenced by zenodo\footnote{\url{https://zenodo.org/}} if required. Challenges were the initial
+effort to get familiar with the workflow and license models. We furthermore did not find
+a convenient solution for version tracking of (a high number of) large files, like for instance room 
 acoustic measurements. A clear benefit is the need for documentation, clean-up and internal
 discussion before releasing data to the public. While this effort seems to be undesirable at
-first glance, it turns out to save a lot of work later on. The feedback from the community
-is very positive and a number of bugs have been reported. We expect that our publicly 
-released scientific code and data contain less bugs than if we would have used it 
-only internally. 
+first glance, it turns out to safe a lot of work later on. The feedback from the community
+is very positive and a number of bugs have been reported. We expect that our publicity 
+released scientific code and data contains less bugs than if we would have used it 
+internally only. 
 
 A common concern often raised by others is the misuse of openly published data by others, 
 for instance for commercial activities. So far we have not seen any misuse of our
 materials and hence cannot confirm this concern.
 
-% ================================================================================
-\section*{Conclusions} \label{sec:conclusions}
+% ................................................................................
+\paragraph*{Conclusions}
 
 We have introduced the concept of open science and discussed its application in the
 field of acoustics. The reproducibility of results is an essential cornerstone of
@@ -307,7 +304,7 @@ proper documentation can be very limited and may lead to irreproducibility of th
 The FAIR policy~\cite{H2020_FAIR:ERC} -- \emph{make data findable, accessible, interoperable and reusable} -- 
 of the European Commission is a first step towards quality standards for 
 data publications. Other initiatives define minimum quality standards for data publications 
-or have instantiated a peer-review for the reproducibility of published findings~\cite{}.  
+or have instantiated a peer-review for the reproducibility of published findings.  
 
 Training and qualification has to be understood as an integral part of research data 
 management and open science. It should convey its foundations as well as common tools 
