--- a/paper/open_science.bib
+++ b/paper/open_science.bib
@@ -105,7 +105,7 @@ note = {Accessed 10.11.2016},
 @Misc{HRK_FDM:WWW,
 author = {Hochschulrektorenkonferenz},
 title = {Management von {F}orschungsdaten - eine zentrale strategische {H}erausforderung für {H}ochschulleitungen},
-howpublished = {\url{https://www.hrk.de/positionen/gesamtliste-beschluesse/position/convention/management-von-forschungsdaten-eine-zentrale-strategische-herausforderung-fuer-hochschulleitungen}},
+% howpublished = {\url{https://www.hrk.de/positionen/gesamtliste-beschluesse/position/convention/management-von-forschungsdaten-eine-zentrale-strategische-herausforderung-fuer-hochschulleitungen}},
 note = {Verabschiedet am 13.5.2014},
 }
 
