Added link to published talk/code

--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -329,6 +329,10 @@ datasets. The scientific track record nowadays builds heavily on such measures a
 citation index and third party funding which potentially hinder the deep involvement 
 into open science.
 
+This paper and the accompanying presentation, as well as their source code, are 
+published under the Creative Commons Attribution 4.0 
+license\footnote{\url{https://github.com/spatialaudio/DAGA2017_towards_open_science_in_acoustics}}.
+
 %================================================================================
 % Bibliography
 %================================================================================
