Finalized paper, added PDFs of paper and talk

--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -48,7 +48,7 @@ $^2$\emph{\small Filmuniversität Babelsberg KONRAD WOLF}}
 % ================================================================================
 \section*{The Scientific Method} \label{sec:intro} 
 
-Before introducing the open science approach in detail its worthwhile to review the
+Before introducing the open science approach in detail it is worthwhile to review the
 foundations of the scientific method. It may be referred to  as 
 \emph{`A method of procedure that has characterized natural science since the 17th 
 century, consisting in systematic observation, measurement, and experiment, and the 
@@ -79,7 +79,7 @@ the main intellectual contributions may be encoded in software only.
 Besides problems in the research methods themselves, results are often not reproducible since 
 necessary supplementary material as protocols, data and implementations are not available. In 
 many cases only the published results are accessible to other researchers. Open science 
-focuses on the ease of access of scientific data underlying research and therefore supports the ease of reproducibility.
+focuses on the ease of access to scientific data underlying research and therefore supports the ease of reproducibility.
 
 An alternative view on the problem of reproducibility is given by asking 
 \textbf{who should benefit from my research}? Potential answers to this question ordered by 
@@ -199,7 +199,7 @@ for publication are \underline{Open Access}, \underline{Open Source} and \underl
 \item \textbf{Aftermath}\\
 After publication, the presented research may be replicated by others. Post-publication
 review will consider the correctness and relevance of the research. The feedback may 
-require to publish an errata or revise the underlying data and code. Finally open 
+require to publish errata or revise the underlying data and code. Finally open 
 questions may bring up ideas for the next research project.
 \end{enumerate}
 
